eal fix of the issue for #nav div sticking out

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,7 @@
 }
 #nav{
 	width:900px;
+	margin:auto;
 }
 
 	.nav-item{
@@ -24,7 +25,7 @@
 		float:left;
 		margin:0px;
 	}
-	
+
 #content{
 	width:900px;
 	height:450px;
